--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -1,5 +1,7 @@
 html, body { padding: 0px; margin: 0px; }
 
+a { text-decoration: none; }
+
 .iconfont { font-size: inherit; line-height: 1; }
 
 .canvasbg { position: relative; overflow: hidden; clear: both; width: 100%; height: 100%; }
@@ -14,6 +16,8 @@ html, body { padding: 0px; margin: 0px; }
 
 .nav { width: 100%; position: fixed; top: 0px; left: 0px; z-index: 10; padding: 0px 36px; margin-top: 42px; }
 
+.nav .logo { width: 52px; height: 34px; background-image: url("../images/index/logo_1.png"); float: left; }
+
 .nav .leftNav { float: right; list-style: none; }
 
 .nav .leftNav li { float: left; padding: 0px 20px; }
@@ -27,6 +31,22 @@ html, body { padding: 0px; margin: 0px; }
 .nav .leftNav li .navBtn { width: 70px; height: 40px; font-size: 16px; color: #fff; border: 1px solid #fff; display: block; text-align: center; line-height: 40px; border-radius: 5px; }
 
 .nav .leftNav li .navBtn:hover { background-color: #fff; color: #55b9fe; text-decoration: none; }
+
+.nav.whiteFixed { background-color: #fff; top: 0px; height: 70px; margin-top: 0px; box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.4); }
+
+.nav.whiteFixed .logo { margin-top: 20px; background-image: url("../images/index/logo_2.png"); }
+
+.nav.whiteFixed .leftNav { margin-top: 20px; }
+
+.nav.whiteFixed .leftNav a { color: #999; }
+
+.nav.whiteFixed .leftNav a:hover, .nav.whiteFixed .leftNav a.active { color: #22a0db; }
+
+.nav.whiteFixed .leftNav a:hover:after, .nav.whiteFixed .leftNav a.active:after { background-color: #22a0db; }
+
+.nav.whiteFixed .leftNav .navBtn { color: #22a0db; border: 1px solid #22a0db; }
+
+.nav.whiteFixed .leftNav .navBtn:hover { color: #fff; background-color: #22a0db; }
 
 .model { max-width: 1200px; margin: 0 auto; clear: both; }
 
@@ -65,3 +85,33 @@ html, body { padding: 0px; margin: 0px; }
 .adv { padding: 50px; text-align: center; }
 
 .adv img { max-width: 1000px; }
+
+.footer { clear: both; overflow: hidden; }
+
+.footer .ft { height: 225px; background-image: url("../images/index/foot1.jpg"); text-align: center; color: #fff; background-position: center; }
+
+.footer .ft .ft_text { font-size: 24px; padding: 40px; }
+
+.footer .ft .registBtn { font-size: 16px; display: inline-block; border: 2px solid #fff; width: 198px; height: 48px; text-align: center; line-height: 48px; border-radius: 5px; color: #fff; }
+
+.footer .ft .registBtn:hover { background-color: #fff; color: #3ebdff; text-decoration: none; }
+
+.footer .fb { height: 225px; background-image: url("../images/index/foot2.jpg"); color: #fff; background-position: center; }
+
+.footer .fb .fb_c { max-width: 1200px; margin: 0 auto; display: flex; display: -webkit-flex; flex: 1; }
+
+.footer .fb .fb_c .fb_item { list-style: none; padding-top: 30px; flex-grow: 1; text-align: left; }
+
+.footer .fb .fb_c .fb_item .fb_title { font-size: 18px; line-height: 2; position: relative; overflow: hidden; }
+
+.footer .fb .fb_c .fb_item .fb_title:after { content: ""; display: block; position: absolute; bottom: 0px; height: 2px; width: 200px; border-bottom: 2px solid rgba(255, 255, 255, 0.5); }
+
+.footer .fb .fb_c .fb_item .fb_i { line-height: 2; }
+
+.footer .fb .fb_c .fb_item .fb_i a { font-size: 14px; color: #fff; }
+
+.footer .fb .fb_c .fb_item .fb_i img { margin: 20px 0px; }
+
+.innerpageContainer { padding-top: 70px; }
+
+.innerpageContainer .aboutImg { min-width: 1200px; height: 398px; background-image: url("../images/index/about.jpg"); background-position: center; }
