--- a/app/static/_key/index.scss
+++ b/app/static/_key/index.scss
@@ -324,5 +324,298 @@ a{
     height: 398px;
     background-image: url("../images/index/about.jpg");
     background-position: center;
+    margin-bottom: 30px;
+  }
+  .about_c{
+    max-width:1200px;
+    margin: 0 auto;
+    margin-bottom: 50px;
+    &:after{
+      content: "";
+      height: 2px;
+      background-color: lightgrey;
+      clear: both;
+      overflow: hidden;
+      width: 100%;
+      display: block;
+      margin-top: 30px;
+      FILTER: progid:DXImageTransform.Microsoft.Gradient(gradientType=1,startColorStr=#DDD,endColorStr=#fff); /*IE 6 7 8*/
+      background: -ms-linear-gradient(left, #DDD,  #fff);        /* IE 10 */
+      background:-moz-linear-gradient(left,#DDD,  #fff);/*火狐*/
+      background:-webkit-gradient(linear, 0% 0%, 0% 100%,from(#DDD), to(#fff));/*谷歌*/
+      background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#DDD), to(#fff));      /* Safari 4-5, Chrome 1-9*/
+      background: -webkit-linear-gradient(left, #DDD,  #fff);   /*Safari5.1 Chrome 10+*/
+      background: -o-linear-gradient(left, #DDD,  #fff);  /*Opera 11.10+*/
+    }
+    .c_name{
+      font-size: 18px;
+      color: #333;
+      line-height: 2;
+    }
+    .c_context{
+      font-size: 14px;
+      line-height: 2;
+      color: #666;
+      p{
+        text-indent: 2em;
+      }
+      .c_left{
+        float: left;
+        width: 50%;
+        p{
+          line-height: 30px;
+          font-size: 16px;
+          color: #666;
+          .iconfont{
+            margin-right: 5px;
+            color: #999;
+          }
+        }
+      }
+      .c_map{
+        float: left;
+        border: 10px solid #fff;
+        box-shadow: 0px 0px 10px rgba(0,0,0,0.5);
+      }
+
+    }
+    &.noLine::after{
+      height: 0px;
+    }
+  }
+}
+.pp_context{
+  max-width: 1200px;
+  margin: 0 auto;
+  .pp_title{
+    text-align: center;
+    font-size: 30px;
+    line-height: 2;
+    color: #333;
+    margin-top: 30px;
+  }
+  .pp_info{
+    font-size: 16px;
+    color: #999;
+    text-align: center;
+    margin-bottom: 30px;
+  }
+  .pp_container{
+    clear: both;
+    overflow: hidden;
+    display: flex;
+    display: -webkit-flex;
+    flex: 1;
+    justify-content: space-around;
+    padding: 50px 0px;
+    .pp_item{
+      position: relative;
+      width: 300px;
+      height: 630px;
+      border: 1px solid #ddd;
+      box-shadow: 0px 0px 9px rgba(0,0,0,0.5);
+      &.superFlag{
+        &::before{
+          content: "最受欢迎的";
+          position: absolute;
+          height: 30px;
+          text-align: center;
+          line-height: 30px;
+          display: block;
+          width: 100%;
+          top: -30px;
+          background-color: #2f97de;
+          color: #fff;
+        }
+      }
+      h2{
+        text-align: center;
+        font-size: 20px;
+        color: #666;
+        line-height: 2;
+      }
+      .pp_h2_info{
+        font-size: 14px;
+        color: #999;
+        text-align: center;
+      }
+      .pp_num{
+       font-size: 36px;
+        color: #333;
+        text-align: center;
+        padding: 20px 0px;
+        span{
+          font-size: 16px;
+        }
+      }
+      .btn{
+        display: block;
+        margin: 10px auto;
+        width: 200px;
+      }
+      .pp_list{
+        border-top:1px solid #ddd;
+        margin-top: 30px;
+        padding-top: 20px;
+        .pp_i{
+          clear: both;
+          overflow: hidden;
+          padding: 0px 60px 0px 20px;
+          font-size: 14px;
+          line-height: 30px;
+          height: 30px;
+          color: #666;
+          position: relative;
+          em{
+            font-style: normal;
+            font-size: 12px;
+            color: #999;
+          }
+          &::after{
+            content: "";
+            display: block;
+            width: 15px;
+            height: 11px;
+            background-image: url("../images/index/right.png");
+            position: absolute;
+            right: 10px;
+            top:7px;
+            background-repeat: no-repeat;
+          }
+          &.pp_i_but{
+            &::after{
+              background-position: 0px -12px;
+              height: 15px;
+              top:4px;
+            }
+          }
+        }
+        .pp_i_no{
+          padding: 0px 20px;
+          line-height: 30px;
+          clear: both;
+          overflow: hidden;
+          color: #666;
+          em{
+            font-style: normal;
+            float: right;
+          }
+          &.blue{
+            em{
+              color: #2f97de;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+//product
+.innerpageContainer .productImg{
+  @extend .aboutImg;
+  background-image: url("../images/product/top.jpg");
+}
+.sec_nav{
+  clear: both;
+  overflow: hidden;
+  max-width: 1200px;
+  margin: 30px auto;
+  text-align: center;
+  .sec_menu{
+    display: inline-block;
+    list-style: none;
+    li{
+      float: left;
+      padding: 0px 20px;
+      a{
+        font-size: 14px;
+        color: #999;
+        position: relative;
+        line-height: 2;
+        display: inline-block;
+        &:hover,&.active{
+          text-decoration: none;
+          color: #2f97de;
+          &::after{
+            content: "";
+            height: 2px;
+            background-color: #2f97de;
+            width: 100%;
+            position: absolute;
+            left: 0px;
+            bottom: 0px;
+          }
+        }
+      }
+    }
+  }
+}
+.hasBg{
+  background-color: #f7f7f7;
+}
+.line_model{
+  max-width: 1200px;
+  margin: 0px auto;
+  padding: 50px 0px;
+  display: table;
+  text-align: left;
+  .line_h{
+    display: table-cell;
+    vertical-align: middle;
+    width: 50%;
+    img{
+      width: 500px;
+    }
+    .line_text{
+      width: 450px;
+      padding-left: 50px;
+      .l_title{
+        font-size: 28px;
+        line-height: 2;
+        em{
+          font-style: normal;
+          font-size: 18px;
+          padding-left: 25px;
+          color: #666;
+        }
+      }
+      .l_des{
+        font-size: 16px;
+        line-height: 2;
+        color: #666;
+      }
+      .l_info{
+        line-height: 2.5;
+        color: #999;
+        font-size: 14px;
+      }
+    }
+    .right_text{
+      float: right;
+      padding-right: 50px;
+      >p{
+        font-size: 28px;
+        line-height: 2;
+      }
+      .icons{
+        clear: both;
+        overflow: hidden;
+        padding: 20px 0px;
+        .r_i{
+          float: left;
+          text-align: center;
+          width: 30%;
+          .iconfont{
+            font-size: 50px;
+            color: #999;
+          }
+          p{
+            font-size: 14px;
+            color: #333;
+            line-height: 2;
+          }
+        }
+      }
+    }
   }
 }
